fix suggestions overlap (bug 818938)

--- a/media/css/mkt/suggestions.less
+++ b/media/css/mkt/suggestions.less
@@ -92,12 +92,12 @@
 @media(min-width: 600px) {
     #site-search-suggestions {
         height: auto;
-        top: 45px;
+        top: 58px;
         left: 50%;
         bottom: inherit;
         right: inherit;
         width: 275px;
-        margin-left: -7px;
+        margin-left: -23px;
         .border-radius(5px);
         .box-shadow(0 0 3px 3px);
         z-index: 11;
